[gd_scene format=3 uid="uid://ccfj47t65jx2h"]

[ext_resource type="Script" uid="uid://dlgfvauwcwbjp" path="res://scripts/ui/tooltip.gd" id="1_uahih"]
[ext_resource type="PackedScene" uid="uid://ybqpcnaw6cyr" path="res://scenes/ui/item_slot.tscn" id="2_wyqgt"]
[ext_resource type="StyleBox" uid="uid://dtgi56g27v6bd" path="res://resources/styles/style_box_flat2.tres" id="3_2tm7o"]
[ext_resource type="FontFile" uid="uid://di4ok7sxd4e16" path="res://assets/LowresPixel-Regular.otf" id="4_gnyjh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bma8u"]
bg_color = Color(0.11764706, 0.12156863, 0.16862746, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.43137255, 0.48235294, 0.6392157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TooltipUI" type="Panel" unique_id=1888124438]
offset_right = 144.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bma8u")
script = ExtResource("1_uahih")
slot_scene = ExtResource("2_wyqgt")
style_box = ExtResource("3_2tm7o")

[node name="ItemName" type="Label" parent="." unique_id=1241481665]
layout_mode = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("4_gnyjh")
theme_override_font_sizes/font_size = 12
text = "Name"

[node name="Description" type="Label" parent="." unique_id=1915113055]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 135.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_gnyjh")
theme_override_font_sizes/font_size = 10
text = "Item description"

[node name="Input" type="Label" parent="." unique_id=855881785]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 59.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("4_gnyjh")
theme_override_font_sizes/font_size = 12
text = "Input"

[node name="InputGrid" type="GridContainer" parent="." unique_id=675550014]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 48.0
offset_bottom = 112.0
scale = Vector2(0.6, 0.6)
columns = 5

[node name="Output" type="Label" parent="." unique_id=1186613994]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 59.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("4_gnyjh")
theme_override_font_sizes/font_size = 12
text = "Output"

[node name="OutputGrid" type="GridContainer" parent="." unique_id=1455458258]
layout_mode = 0
offset_left = 8.0
offset_top = 120.0
offset_right = 48.0
offset_bottom = 160.0
scale = Vector2(0.6, 0.6)
columns = 5
